register and login done with passowrd hashing

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="stylesheets/home/home.css">
+    <link rel="stylesheet" href="stylesheets/login/login.css">
     
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -58,25 +58,22 @@
               <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
                   <h1 >We help make LIFE better.</h1>
-                  <h5 class="mb-4" style="color: rgb(255,255,255);">Recovery is all about using our power to change our beliefs that are based on faulty data. Become addicted to constant and never-ending self-improvement.</h5>
-                  <p><a href="/login" class="btn btn-primary py-3 px-5 btn-pill">Login</a></p>
+                  <h4 class="mb-4" style="color: rgb(255,255,255);">Strength does not come from physical capacity. It comes from an indomitable will. Anyone can give up; it is the easiest thing in the world to do. But to hold it together when everyone would expect you to fall apart, now that is true strength.</h4>
+                  <p><a href="/" class="btn btn-primary py-3 px-5 btn-pill">Register</a></p>
 
                 </div>
 
                 <div class="col-lg-5 ml-auto"  id="register">
-                  <form action="/register" method="post" class="form-box">
-                    <h3 class="h4 text-black mb-4">Sign Up</h3>
+                  <form action="/login" method="post" class="form-box">
+                    <h3 class="h4 text-black mb-4">Login</h3>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Email Addresss" name="email">
                     </div>
                     <div class="form-group">
                       <input type="password" class="form-control" placeholder="Password" name="password">
                     </div>
-                    <div class="form-group mb-4">
-                      <input type="password" class="form-control" placeholder="Re-type Password" name="cpassword">
-                    </div>
                     <div class="form-group">
-                      <input type="submit" class="btn btn-primary btn-pill" value="Sign up">
+                      <input type="submit" class="btn btn-primary btn-pill" value="Login">
                     </div>
                   </form>
 
