--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,7 +63,7 @@
 
                 </div>
 
-                <div class="col-lg-5 ml-auto"  id="register">
+                <div class="col-lg-5 ml-auto" >
                   <form action="/login" method="post" class="form-box">
                     <h3 class="h4 text-black mb-4">Login</h3>
                     <div class="form-group">
